--- a/css/bass.css
+++ b/css/bass.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'iconfont';  /* project id 506718 */
+  src: url('http://at.alicdn.com/t/font_506718_q4xz599xrq5v1jor.eot');
+  src: url('http://at.alicdn.com/t/font_506718_q4xz599xrq5v1jor.eot?#iefix') format('embedded-opentype'),
+  url('http://at.alicdn.com/t/font_506718_q4xz599xrq5v1jor.woff') format('woff'),
+  url('http://at.alicdn.com/t/font_506718_q4xz599xrq5v1jor.ttf') format('truetype'),
+  url('http://at.alicdn.com/t/font_506718_q4xz599xrq5v1jor.svg#iconfont') format('svg');
+}
+i{
+	font-family:'iconfont';
+}
 *{
 	margin: 0;
 	padding: 0;
