--- a/css/index.css
+++ b/css/index.css
@@ -202,23 +202,14 @@
 .skill {
 	width: 100%;
 	height: 100%;
-	background: url(../img/pic02.jpg) no-repeat;
+	background: url(../img/hand.jpg) no-repeat;
 	background-size: 100% 100%;
-}
-
-.skill_right {
-	width: 60%;
-	height: 80%;
-	background: red;
-	float: right;
-	margin-top: 5%;
-	margin-right: 5%;
 }
 
 .scene {
 	width: 60%;
 	height: 80%;
-	float: right;
+	float: left;
 	margin-top: 5%;
 	margin-right: 5%;
 	position: relative;
@@ -248,9 +239,10 @@
 	transform-style: preserve-3d;
 	transform-origin: center center -400px;
 	opacity: 0.6;
-	transition: all .5s; 
+	transition: all .5s;
 }
-.scene ul li:hover{
+
+.scene ul li:hover {
 	opacity: 1;
 }
 
@@ -297,6 +289,7 @@
 }
 
 .skill_con p {
+	display: block;
 	margin: 0 auto;
 	font-size: 20px;
 	text-align: center;
@@ -323,30 +316,50 @@
 	z-index: 999;
 }
 
+.skill_right {
+	width: 200px;
+	height: 200px;
+	position: absolute;
+	right: 500px;
+	top: 300px;
+}
+
+.skill_right .box {
+	width: 200px;
+	position: relative;
+}
+
+.skill_right canvas {
+	display: none;
+	position: absolute;
+	background: rgba(0,0,0,0.6);
+	border-radius: 50%;
+}
+.skill_right canvas.active{
+	display: block;
+	z-index: 999999;
+}
 
 /*六边形*/
-.section4{
-	background: url(../img/sec4.jpg) no-repeat center;
+
+.section4 {
+	background: url(../img/desk-white-black-header.jpg) no-repeat center;
 	background-size: 100% 100%;
 }
-#hexGrid {
-	overflow: hidden;
-	width: 80%;
-	margin: 0 auto;
-	padding: 0.866% 0;
-	font-family: 'Raleway', sans-serif;
-	font-size: 15px;
-}
 
-#hexGrid:after {
-	content: "";
-	display: block;
-	clear: both;
+.production {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-content: center;
+	padding-top: 20px;
 }
 
 .hex {
-	width: 25%;
-	padding-bottom: 29%;
+	width: 250px;
+	height: 290px;
 	position: relative;
 	list-style-type: none;
 	float: left;
@@ -354,6 +367,8 @@
 	visibility: hidden;
 	outline: 1px solid transparent;
 	transform: rotate(-60deg) skewY(30deg) translatez(-1px);
+	margin-left: 100px;
+	margin-right: 100px;
 }
 
 .hex * {
@@ -366,10 +381,11 @@
 	display: block;
 	width: 100%;
 	height: 100%;
-	text-align: center;
-	color: #fff;
 	overflow: hidden;
 	transform: skewY(-30deg) rotate(60deg);
+	background: red;
+	color: #FFFFFF;
+	text-align: center;
 }
 
 .hex img {
@@ -384,10 +400,12 @@
 .hex p {
 	width: 102%;
 	left: -1%;
+	/* prevent line on the right where background doesn't cover image */
 	padding: 5%;
 	box-sizing: border-box;
 	background-color: rgba(0, 128, 128, 0.8);
 	font-weight: 300;
+	-webkit-transition: -webkit-transform .2s ease-out, opacity .3s ease-out;
 	transition: transform .2s ease-out, opacity .3s ease-out;
 }
 
@@ -396,6 +414,8 @@
 	padding-top: 50%;
 	font-size: 1.5em;
 	z-index: 1;
+	-webkit-transform: translateY(-100%) translatez(-1px);
+	-ms-transform: translateY(-100%) translatez(-1px);
 	transform: translateY(-100%) translatez(-1px);
 }
 
@@ -412,6 +432,8 @@
 .hex p {
 	top: 50%;
 	padding-bottom: 50%;
+	-webkit-transform: translateY(100%) translatez(-1px);
+	-ms-transform: translateY(100%) translatez(-1px);
 	transform: translateY(100%) translatez(-1px);
 }
 
@@ -419,53 +441,102 @@
 .hexIn:focus h1,
 .hexIn:hover p,
 .hexIn:focus p {
+	-webkit-transform: translateY(0%) translatez(-1px);
+	-ms-transform: translateY(0%) translatez(-1px);
 	transform: translateY(0%) translatez(-1px);
 }
 
-
-.hex:nth-child(9n+6),
-.hex:nth-child(9n+7),
-.hex:nth-child(9n+8),
-.hex:nth-child(9n+9) {
-	margin-top: -4.676%;
-	margin-bottom: -4.676%;
-	transform: translateX(50%) rotate(-60deg) skewY(30deg);
+.relation {
+	width: 100%;
+	height: 100%;
+	background: url(../img/pexels-photo-696680.jpeg) no-repeat center;
+	background-size: 100% 100%;
+	position: relative;
 }
 
-.hex:nth-child(9n+6):last-child,
-.hex:nth-child(9n+7):last-child,
-.hex:nth-child(9n+8):last-child,
-.hex:nth-child(9n+9):last-child {
-	margin-bottom: 0;
+.mask-top {
+	width: 100%;
+	height: 8%;
+	background: rgba(0, 0, 0, 0.8);
+	position: absolute;
+	top: 0;
 }
 
-.hex:nth-child(9n+6) {
-	margin-left: 0.5%;
-	clear: left;
+.mask-bottom {
+	padding-top: 50px;
+	width: 100%;
+	height: 50%;
+	background: rgba(0, 0, 0, 0.8);
+	position: absolute;
+	bottom: 0;
 }
 
-.hex:nth-child(9n+10) {
-	clear: left;
+.contact-input {
+	background: #F3F3F4;
+	width: 100%;
+	border: 1px solid #000;
+	border-radius: 3px;
+	outline: none;
+	font-size: 15px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #000;
+	margin-bottom: 20px;
+	padding: 10px 15px;
+	box-sizing: border-box;
+	resize: vertical;
 }
 
-.hex:nth-child(9n+2),
-.hex:nth-child(9n+7) {
-	margin-left: 1%;
-	margin-right: 1%;
+.tijiao {
+	padding: 10px 30px;
+	background: #ccc;
+	border: 0;
+	border-radius: 2px;
+	color: #fff;
 }
 
-.hex:nth-child(9n+3),
-.hex:nth-child(9n+4),
-.hex:nth-child(9n+8) {
-	margin-right: 1%;
+.tijiao:hover {
+	cursor: pointer;
 }
-.hex:nth-child(1){
-	margin-right: 10%;
+
+.lianxi-z {
+	width: 50%;
+	float: left;
+	margin-left: 5%;
 }
-.hex:nth-child(2){
-	margin-right: 10%;
+
+.lianxi-y {
+	width: 40%;
+	float: right;
 }
-.hex:nth-child(4){
-	margin-left: 18%;
-	margin-right: 10%;
+
+.lianxi-y-n {
+	margin-bottom: 30px;
+	overflow: hidden;
+}
+
+.lianxi-icon {
+	float: left;
+	margin-right: 15px;
+}
+
+.lianxi-icon {
+	display: block;
+	height: 60px;
+	width: 60px;
+	background-color: #eee;
+	color: #55575d;
+	font-size: 36px;
+	text-align: center;
+	line-height: 60px;
+	border-radius: 5px;
+}
+
+.lianxi-icon span i {
+	font-size: 36px;
+}
+
+.lianxi-wz {
+	font-size: 16px;
+	color: #fff;
 }
